@@ -6,10 +6,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -28,7 +26,7 @@ public class BackupService {
 
     public Path backupFilePath(UblDocument ublDocument) {
         ZonedDateTime zonedDateTime = ublDocument.getCreatedOn() == null ? ZonedDateTime.now(ZoneId.systemDefault()) : ublDocument.getCreatedOn().atZone(ZoneId.systemDefault());
-        return Paths.get(
+        return Path.of(
                 (dataDirectory == null || dataDirectory.isBlank()) ? System.getProperty("java.io.tmpdir") : dataDirectory,
                 "backup",
                 applicationName,
@@ -49,7 +47,7 @@ public class BackupService {
                 Files.createDirectories(parent);
             }
             System.out.println("Writing file as backup to: " + filePath);
-            Files.writeString(filePath, ublDocument.getUbl(), StandardCharsets.UTF_8);
+            Files.writeString(filePath, ublDocument.getUbl());
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -58,7 +56,7 @@ public class BackupService {
     public void clearBackupFile(UblDocument ublDocument) {
         Path filePath = backupFilePath(ublDocument);
         try {
-            Files.writeString(filePath, DEFAULT_CONTENT_FOR_NO_ARCHIVE, StandardCharsets.UTF_8, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+            Files.writeString(filePath, DEFAULT_CONTENT_FOR_NO_ARCHIVE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
